fixed fonts and spacing, updated q files

--- a/q/style.css
+++ b/q/style.css
@@ -219,6 +219,20 @@ li{border: 2px solid #888; border-radius: 15px; margin: 10px 0px; text-align: ce
 
 .error{color: red; font-size: 1em;}
 
+footer{
+    text-align: center;
+	position: absolute;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	background-color: white;
+	box-shadow: 0px -1px 0px 0.5px rgba(0, 0, 0, 0.08);
+	padding: 10px 10px;
+	
+}
+
+footer p{font-size: 12px; text-align: center; margin: 0; padding: 0;}
+
 /* Super Small Devices: Fold
 @media (min-width: 360px){
     #adminModal{
